[package]
name = "fixed-mpsc"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@lancastr.com>"]
edition = "2018"

[dependencies]
futures = "0.1.29"
fixed-vec-deque = "0.1.8"

[dev-dependencies]
criterion = "0.3"
tokio = "0.1.22"
tokio-current-thread = "0.1.6"

[[bench]]
name = "futures"
harness = false